Ensure a short student record is fully displayed completely without being covered by the tools.

--- a/wdn/templates_3.0/css/content/vcard.css
+++ b/wdn/templates_3.0/css/content/vcard.css
@@ -15,6 +15,7 @@
     padding:1em;
     position:relative;
     overflow:auto;
+    min-height: 148px;
 }
 .vcard .vcardInfo .org, .vcard .vcardInfo > .title {
     background: #f2f9fe; /* Old browsers */
